Correct items in circles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Road Genius - Die App gegen gelangweilte Kinder auf der Autofahrt</title>
+    <title>Road Genius - Die App gegen Langeweile von Kindern auf Autofahrten und Reisen</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -78,10 +78,10 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Die Quiz-App gegen gelangweilte Kinder</div>
+                <div class="intro-lead-in">Die Quiz-App gegen Kinder-Langeweile auf Fahrten</div>
                 <div class="intro-heading">Entdecken Sie <br>Road Genius</div>
-                <a href="#services" class="btn btn-default btn-xl">Mehr Informationen</a>
-                <a href="#services" class="page-scroll btn btn-primary btn-xl">Download für Android</a>
+                <a href="#services" class="page-scroll btn btn-default btn-xl">Mehr Informationen</a>&nbsp;
+                <a href="#download" class="page-scroll btn btn-primary btn-xl">Direkt zum Download</a>
             </div>
         </div>
     </header>
@@ -89,17 +89,21 @@
     <!-- Services Section -->
     <section id="services" class="bg-light-gray">
         <div class="container">
+<h2 class="section-heading text-center">Was ist Road Genius?</h2>
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Was ist Road Genius?</h2>
-                    <p class="lead text-muted">Ungeduldige, gelangweilte oder sogar quengelige Kinder, während Sie sich eigentlich auf die Straße und den Straßenverkehr konzentrieren müssten? Doch was tun? Road Genius bietet Ihnen die Lösung. Wir bieten Ihnen eine App für die Kinderunterhaltung im Auto. Mit Fragen und Rätseln zur aktuellen Umgebung bieten wir Ihren Kindern während der Fahrt beste Unterhaltung, verlieren jedoch auch Ihre Bildung nicht aus den Augen. So können Sie sich während der Fahrt auf wichtige Dinge wie Straßenverkehr konzentrieren, währen Ihre Kinder bestens unterhalten sind und dabei sogar noch etwas über Ihre Umgebung lernen.</p>
+                
+                <div class="col-lg-6">
+                    <p class="lead text-muted">Ungeduldige, gelangweilte oder sogar quengelige Kinder, während Sie sich eigentlich auf die Straße und den Straßenverkehr konzentrieren müssten?<br><br>Unsere App "Road Genius" ist die Lösung.</p>
+                </div>
+                <div class="col-lg-6">
+                    <p class="text-muted">Wir bieten Ihnen eine Quiz-App für die Kinderunterhaltung im Auto. Mit Fragen und Rätseln zur aktuellen Umgebung bieten wir Ihren Kindern während der Fahrt beste Unterhaltung, verlieren jedoch auch Ihre Bildung nicht aus den Augen. So können Sie sich während der Fahrt auf wichtige Dinge wie Straßenverkehr konzentrieren, während Ihre Kinder bestens unterhalten sind und dabei sogar noch etwas über Ihre Umgebung lernen.</p>
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row text-center" style="margin-top:100px">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-car fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Fragen über die Umgebung</h4>
                     <p class="text-muted">Die Fragen beziehen sich auf Ihre aktuelle Umgebung. Ihr Kind starrt also nicht nur auf den Bildschirm, sondern muss aus dem Fenster schauen und entdeckt so die interessanten Dinge um das Auto herum.</p>
@@ -107,7 +111,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-location-arrow fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Fragen über die aktuelle Region</h4>
                     <p class="text-muted">Fragen sind abhängig von Ihrer aktuellen Position. In der Nähe des Bundestags lernt Ihr Kind also beispielsweise etwas darüber, dass dort unsere Bundeskanzlerin Angela Merkel arbeitet.</p>
@@ -115,7 +119,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-check fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Fragen angepasst an das Alter</h4>
                     <p class="text-muted">Fragen sind altersspezifisch. Die App passt sich also dem Alter und dem Wissen Ihres Kindes an. So ist eine gute Unterhaltung sichergestellt und Ihr Kind ist nicht frustriert von zu schweren Fragen.</p>
@@ -125,7 +129,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" style="margin-top:-100px">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
