Text and layout changes

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Ihr Erlebnis mit Road Genius</h2>
-                    <h3 class="section-subheading text-muted">Sie konzentrieren sich auf das Wesentliche, Ihre Kinder sind unterhalten und lernen etwas.</h3>
+                    <h3 class="section-subheading text-muted">Eine beispielhafte Autofahrt durch unsere Hauptstadt. Sie konzentrieren sich auf das Wesentliche, Ihre Kinder sind unterhalten und lernen etwas.</h3>
                 </div>
             </div>
             <div class="row">
@@ -146,10 +146,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Der Beginn der Fahrt</h4>
+                                    <h4>Der Fahrtbeginn</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Sie steigen ein, schnallen die Kinder an und geben Ihnen ein iOS- oder Android-Gerät mit geöffneter Road Genius-App in die Hand. Nehmen wir an, Sie wollten beispielsweise vom vom Fensehturm in Berlin zum Bundestag fahren.</p>
+                                    <p class="text-muted">Nehmen wir an, Sie wollten beispielsweise vom vom Fensehturm in Berlin zum Bundestag fahren. Unter den Linden ist viel los und Sie müssen wahrscheinlich konzentriert sein. Sie schnallen die Kinder an und geben Ihnen ein iOS- oder Android-Gerät mit geöffneter "Road Genius"-App in die Hand und fahren los.</p>
                                 </div>
                             </div>
                         </li>
@@ -162,7 +162,7 @@
                                     <h4>Am Fernsehturm</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Die App erkennt, dass Sie sich gerade beim Fernsehturm befinden und fragt Ihr Kind: "Was für eine Art von Turm steht hier?". Ihr Kind kann aus dem Fenster schauen und erkennt, dass es sich um den Fernsehturm handelt.</p>
+                                    <p class="text-muted">Das Quiz für Ihre Kinder hat bereits bekonnen. Road Genius erkennt, dass Sie sich gerade in der Nähe des Fernsehturms befinden und fragt Ihr Kind: "Was für eine Art von Turm steht hier?". Ihr Kind kann aus dem Fenster schauen und erkennt, dass es sich um den Fernsehturm handelt.</p>
                                 </div>
                             </div>
                         </li>
@@ -175,7 +175,7 @@
                                     <h4>Über die Spree</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Während Ihr Kind die vorherige Frage beantwortet hat, sind Sie natürlich weiter gefahren. Nun befinden Sie sich unter den Linden kurz vor der Brücke über die Spree. Die App fragt nun, um welchen Fluss Sie gleich fahren. Dies erkennt ihr Kind entweder durch die enstprechenden Brückenschilder oder weiß es bereits.</p>
+                                    <p class="text-muted">Während Ihr Kind die vorherige Frage beantwortet hat, sind Sie natürlich weiter gefahren. Nun sind Sie kurz vor der Brücke über die Spree. Road Genius fragt nun, über welchen Fluss Sie gleich fahren. Dies weiß ihr Kind bereits oder erkennt es anhand der Brückenschilder.</p>
                                 </div>
                             </div>
                         </li>
@@ -188,7 +188,7 @@
                                     <h4>Vor dem Brandenburger Tor</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Sie bewegen sich nun mit Ihrem Auto auf das Brandenburger Tor zu. Die App fragt Ihr Kind: "Gleich kommt das Brandenburger Tor. Wer oder Was steht auf dem Tor?". Je näher Sie kommen, umso klarer wird, dass es sich um die Quadriga handelt. Ihr Kind hat dies entdeckt und antwortet richtig "Vier Pferde und eine Kutscherin".</p>
+                                    <p class="text-muted">Sie bewegen sich nun mit Ihrem Auto auf das Brandenburger Tor zu. Road Genius fragt Ihr Kind: "Gleich kommt das Brandenburger Tor. Wer oder was steht auf dem Tor?". Je näher Sie kommen, umso klarer wird, dass es sich um die Quadriga handelt. Ihr Kind hat dies entdeckt und antwortet richtig "Vier Pferde und eine Kutscherin".</p>
                                 </div>
                             </div>
                         </li>
@@ -211,9 +211,20 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Das Road-Genius-Team</h2>
-                    <h3 class="section-subheading text-muted">Das Team vom CodeFEST8 in Karlsruhe.</h3>
+                    <h3 class="section-subheading text-muted">Road Genius ist im Rahmen des CodeFEST8 in Karlsruhe entstanden.</h3>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <img src="https://pbs.twimg.com/media/B_lsfrnWcAAqW1W.jpg:large" class="img-responsive">
+                </div>
+                <div class="col-lg-6">
+                    <p class="large text-muted">Das CodeFEST ist ein Wettbewerb, der parallel in acht Städten in drei Ländern ausgetragen wird. Hierbei wird innerhalb von zwei Tagen ein Konzept bis zum Minimum Viable Product - einem funktionsfähigen Prototypen - umgesetzt. Wir haben den Karlsruher Wettbewerb mit "Road Genius" gewonnen und werden nun gegen die anderen CodeFEST-Teams auf der CeBIT antreten.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container" style="margin-top:200px">
             <div class="row">
                 <div class="col-sm-3">
                     <div class="team-member">
@@ -273,11 +284,6 @@
                     </div>
                 </div>
 
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Drive Genius - Ein Projekt im Rahmen des CodeFEST8 in Karlsruhe. Umsetzung von Konzept bis Minimum Viable Product innerhalb von drei Tagen.</p>
-                </div>
             </div>
         </div>
     </section>
