example of a mockup integration

--- a/index.html
+++ b/index.html
@@ -90,13 +90,16 @@
     <section id="services" class="bg-light-gray">
         <div class="container">
 <h2 class="section-heading text-center">Was ist Road Genius?</h2>
+                    <h3 class="section-subheading text-muted text-center">Die App gegen Kinder-Langeweile auf Autofahrten</h3>
             <div class="row">
-                
-                <div class="col-lg-6">
-                    <p class="lead text-muted">Ungeduldige, gelangweilte oder sogar quengelige Kinder, während Sie sich eigentlich auf die Straße und den Straßenverkehr konzentrieren müssten?<br><br>Unsere App "Road Genius" ist die Lösung.</p>
+                <div class="col-md-4">
+                    <p class="lead text-muted">Ungeduldige, gelangweilte oder sogar quengelige Kinder, während Sie sich eigentlich auf die Straße und den Straßenverkehr konzentrieren müssten?</p>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-md-4">
                     <p class="text-muted">Wir bieten Ihnen eine Quiz-App für die Kinderunterhaltung im Auto. Mit Fragen und Rätseln zur aktuellen Umgebung bieten wir Ihren Kindern während der Fahrt beste Unterhaltung, verlieren jedoch auch Ihre Bildung nicht aus den Augen. So können Sie sich während der Fahrt auf wichtige Dinge wie Straßenverkehr konzentrieren, während Ihre Kinder bestens unterhalten sind und dabei sogar noch etwas über Ihre Umgebung lernen.</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="http://pixabay.com/static/uploads/photo/2015/03/01/11/29/mockup-654585_640.jpg" class="img-responsive" style="border: 7px solid #fff;">
                 </div>
             </div>
             <div class="row text-center" style="margin-top:100px">
