Changed wording a little

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Road Genius - Die App gegen Langeweile von Kindern auf Autofahrten und Reisen</title>
+    <title>Road Genius - Die Quiz-App für Kinder gegen Langeweile auf Autofahrten und Reisen</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Road Genius</a>
+                <a class="navbar-brand page-scroll" href="#page-top"><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Road Genius - Quiz-App für Kinder</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -78,8 +78,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Die Quiz-App gegen Kinder-Langeweile auf Fahrten</div>
-                <div class="intro-heading">Entdecken Sie <br>Road Genius</div>
+                <div class="intro-lead-in">Die Quiz-App für Kinder <br>gegen Langeweile während der Autofahrt</div>
+                <div class="intro-heading">Road Genius</div>
                 <a href="#services" class="page-scroll btn btn-default btn-xl">Mehr Informationen</a>&nbsp;
                 <a href="#contact" class="page-scroll btn btn-primary btn-xl">Schreiben Sie uns</a>
             </div>
@@ -93,7 +93,7 @@
             <div class="row">
                 
                 <div class="col-lg-6">
-                    <p class="lead text-muted">Ungeduldige, gelangweilte oder sogar quengelige Kinder, während Sie sich eigentlich auf die Straße und den Straßenverkehr konzentrieren müssten?<br><br>Unsere App "Road Genius" ist die Lösung.</p>
+                    <p class="lead text-muted">Ungeduldige, gelangweilte oder sogar quengelige Kinder, während Sie sich eigentlich auf die Straße und den Straßenverkehr konzentrieren müssten?<br><br>Unsere Quiz-App "Road Genius" ist die Lösung.</p>
                 </div>
                 <div class="col-lg-6">
                     <p class="text-muted">Wir bieten Ihnen eine Quiz-App für die Kinderunterhaltung im Auto. Mit Fragen und Rätseln zur aktuellen Umgebung bieten wir Ihren Kindern während der Fahrt beste Unterhaltung, verlieren jedoch auch Ihre Bildung nicht aus den Augen. So können Sie sich während der Fahrt auf wichtige Dinge wie Straßenverkehr konzentrieren, während Ihre Kinder bestens unterhalten sind und dabei sogar noch etwas über Ihre Umgebung lernen.</p>
@@ -352,19 +352,15 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://github.com/lorey/roadgenius.de"><i class="fa fa-github"></i></a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
+                        <li><a href="#">No information stored, no Privacy Policy</a>
                         </li>
-                        <li><a href="#">Terms of Use</a>
+                        <li><a href="#">Just install it, no Terms of Use</a>
                         </li>
                     </ul>
                 </div>
