--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="container">
 <h2 class="section-heading text-center">Was ist Road Genius?</h2>
             <div class="row">
-                
+
                 <div class="col-lg-6">
                     <p class="lead text-muted">Ungeduldige, gelangweilte oder sogar quengelige Kinder, während Sie sich eigentlich auf die Straße und den Straßenverkehr konzentrieren müssten?<br><br>Unsere Quiz-App "Road Genius" ist die Lösung.</p>
                 </div>
@@ -216,7 +216,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="https://pbs.twimg.com/media/B_lsfrnWcAAqW1W.jpg:large" class="img-responsive">
+                    <img src="img/B_lsfrnWcAAqW1W.jpg:large" class="img-responsive">
                 </div>
                 <div class="col-lg-6">
                     <p class="large text-muted">Das CodeFEST ist ein Wettbewerb, der parallel in acht Städten in drei Ländern ausgetragen wird. Hierbei wird innerhalb von zwei Tagen ein Konzept bis zum Minimum Viable Product - einem funktionsfähigen Prototypen - umgesetzt. Wir haben den Karlsruher Wettbewerb mit "Road Genius" gewonnen und werden nun gegen die anderen CodeFEST-Teams auf der CeBIT antreten.</p>
@@ -293,7 +293,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <a href="#">
-                        <img src="http://www.group-it.volkswagenag.com/fileadmin/cebit_2015/Banner_1000x190_03.jpg" class="img-responsive img-centered" alt="">
+                        <img src=img/Banner_1000x190_03.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
