Fix URL Bugs for images

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="img/B_lsfrnWcAAqW1W.jpg:large" class="img-responsive">
+                    <img src="img/B_lsfrnWcAAqW1W.jpg" class="img-responsive">
                 </div>
                 <div class="col-lg-6">
                     <p class="large text-muted">Das CodeFEST ist ein Wettbewerb, der parallel in acht Städten in drei Ländern ausgetragen wird. Hierbei wird innerhalb von zwei Tagen ein Konzept bis zum Minimum Viable Product - einem funktionsfähigen Prototypen - umgesetzt. Wir haben den Karlsruher Wettbewerb mit "Road Genius" gewonnen und werden nun gegen die anderen CodeFEST-Teams auf der CeBIT antreten.</p>
@@ -293,7 +293,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <a href="#">
-                        <img src=img/Banner_1000x190_03.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/Banner_1000x190_03.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
