--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="https://avatars.githubusercontent.com/u/5477103?v=3" class="img-responsive img-circle" alt="">
+                        <img src="img/team/lockeyo.png"" class="img-responsive img-circle" alt="">
                         <h4>Marcel Engelmann</h4>
                         <p class="text-muted">Idee & Frontend</p>
                         <ul class="list-inline social-buttons">
@@ -245,7 +245,7 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="https://avatars.githubusercontent.com/u/1550765?v=3" class="img-responsive img-circle" alt="">
+                        <img src="img/team/lorey.png" class="img-responsive img-circle" alt="">
                         <h4>Karl Lorey</h4>
                         <p class="text-muted">Datenbank & Website</p>
                         <ul class="list-inline social-buttons">
@@ -260,7 +260,7 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="https://avatars.githubusercontent.com/u/11362265?v=3" class="img-responsive img-circle" alt="">
+                        <img src="img/team/msde12.png" class="img-responsive img-circle" alt="">
                         <h4>Michael Sbitnev</h4>
                         <p class="text-muted">Datenbank</p>
                         <ul class="list-inline social-buttons">
@@ -271,7 +271,7 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="https://avatars.githubusercontent.com/u/1418124?v=3" class="img-responsive img-circle" alt="">
+                        <img src="img/team/TobiasWeis.png" class="img-responsive img-circle" alt="">
                         <h4>Tobias Weis</h4>
                         <p class="text-muted">Backend & API</p>
                         <ul class="list-inline social-buttons">
