--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/team/lockeyo.png"" class="img-responsive img-circle" alt="">
+                        <img src="img/team/lockeyo.jpg" class="img-responsive img-circle" alt="">
                         <h4>Marcel Engelmann</h4>
                         <p class="text-muted">Idee & Frontend</p>
                         <ul class="list-inline social-buttons">
