--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                     <h4>Der Fahrtbeginn</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Nehmen wir an, Sie wollten beispielsweise vom vom Fensehturm in Berlin zum Bundestag fahren. Unter den Linden ist viel los und Sie müssen wahrscheinlich konzentriert sein. Sie schnallen die Kinder an und geben Ihnen ein iOS- oder Android-Gerät mit geöffneter "Road Genius"-App in die Hand und fahren los.</p>
+                                    <p class="text-muted">Nehmen wir an, Sie wollten beispielsweise vom Fensehturm in Berlin zum Bundestag fahren. Unter den Linden ist viel los und Sie müssen wahrscheinlich konzentriert sein. Sie schnallen die Kinder an und geben Ihnen ein iOS- oder Android-Gerät mit geöffneter "Road Genius"-App in die Hand und fahren los.</p>
                                 </div>
                             </div>
                         </li>
